fix alignment of fields in tab

--- a/css/back_styles.css
+++ b/css/back_styles.css
@@ -218,3 +218,6 @@ fieldset {
 .plugin-row:first-child { padding:15px 15px 0; }
 .plugin-row .row-left { width:60%; float:left; }
 .plugin-row .row-right { width:35%; float:right; }
+.form-table th { width:0; display:none; }
+.form-table td label { margin-right:10px; }
+.form-table td .indent { margin-left:25px; }
